<resources>
    <string name="app_name">DroidHub</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="or_login">or Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="or_sign_up">Or Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="choose_file">Choose file</string>
    <string name="file_name">File name goes here</string>
    <string name="add_file">Add a file</string>
    <string name="upload_file">Upload file</string>
    <string name="your_files">Your files</string>
    <string name="droidhub">DroidHub</string>
    <string name="droid_icon">Droid icon</string>
    <string name="About_app">DroidHub is an app for anybody and everyone who needs a medium for storing their files(images, pdfs, videos). <br></br><br></br>
        What more is that apart from saving to the cloud, it allows you to download the files uploaded to the cloud to your devices anywhere, anytime.</string>
    <string name="about">About</string>
    <string name="about_the_app">About the App</string>
    <string name="log_out">Log out</string>
    <string name="about_developer">About Developer</string>
    <string name="about_dev">Contact: Bakarek008@gmail.com</string>
</resources>