<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".main.LogInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp">

        <TextView
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            style="@style/Widget.DroidHub.TextView"
            android:text="@string/login"
            android:gravity="top"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:layout_below="@id/log_in"
            app:boxBackgroundColor="@color/purple_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/name_layout"
            android:layout_marginTop="18dp"
            app:boxBackgroundColor="@color/purple_50"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/load"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/password_layout"
            android:layout_marginTop="130dp"
            android:rotation="193"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/load"
            android:contentDescription="@string/loading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="60dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_below="@id/load"
            app:cornerRadius="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/or_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.DroidHub.Button"
            android:layout_alignParentBottom="true"
            android:text="@string/or_sign_up"/>
    </RelativeLayout>
</ScrollView>