<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    tools:context=".menu.AboutApp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:gravity="center"
            android:id="@+id/header"
            android:background="@color/droid">

            <TextView
                android:id="@+id/droid_hub"
                style="@style/Widget.DroidHub.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="top"
                android:text="@string/droidhub"
                android:textColor="@color/white"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/droid_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/droid_hub"
                android:src="@drawable/droid_icon"
                android:contentDescription="@string/droid_icon"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="8dp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="13dp"
            style="@style/Widget.DroidHub.TextView"
            android:text="@string/about"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about"
            android:text="@string/About_app"
            android:layout_marginTop="18dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </RelativeLayout>
</ScrollView>