<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".files.UploadFilesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp">

        <TextView
            android:id="@+id/add_file"
            style="@style/Widget.DroidHub.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:gravity="top"
            android:text="@string/add_file" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:layout_below="@id/add_file"
            android:background="@drawable/background"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="10dp"
            android:hint="@string/file_name"
            android:visibility="visible"
            android:freezesText="true"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="24dp"
            android:text="@string/choose_file"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_below="@id/file_name"
            app:cornerRadius="0dp"/>

        <ProgressBar
            android:id="@+id/load"
            android:indeterminateTint="@color/droid"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="124dp"
            android:layout_below="@id/choose"
            android:rotation="234"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="60dp"
            android:text="@string/upload_file"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_below="@id/load"
            app:cornerRadius="0dp"/>

    </RelativeLayout>
</ScrollView>