<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".SignUp.SignUpFragment">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp">

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            style="@style/Widget.DroidHub.TextView"
            android:text="@string/sign_up"
            android:gravity="top"/>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="48dp"
            android:layout_below="@id/sign_up"
            app:startIconDrawable="@drawable/ic_person"
            app:boxBackgroundColor="@color/purple_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="18dp"
            android:layout_below="@id/name_layout"
            app:startIconDrawable="@drawable/ic_email"
            app:boxBackgroundColor="@color/purple_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="18dp"
            android:layout_below="@id/email_layout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:boxBackgroundColor="@color/purple_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/load"
            android:indeterminateTint="@color/droid"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:layout_below="@id/password_layout"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="60dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_below="@id/load"
            app:cornerRadius="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/or_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.DroidHub.Button"
            android:layout_alignParentBottom="true"
            android:text="@string/or_login"/>
    </RelativeLayout>
</ScrollView>